Finished the first recipe , lasagna.

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,9 +9,54 @@
     <h1>Lasagna</h1>
     
     <img src="https://assets.bonappetit.com/photos/656f48d75b552734225041ba/1:1/w_3129,h_3129,c_limit/20231120-WEB-Lasanga-6422.jpg" width="300px" height="300px">
-    
+
     <h2>Homemade Lasagna</h2>
     <p>This is my mom's special homemade lasagna recipe with a meaty, made-from-scratch tomato sauce and a deliciously cheesy filling. A more traditional homemade lasagna filling would be made with ricotta but my mom's recipe calls for a blend of small-curd cottage cheese and Parmesan. I have found none better anywhere. Serve with a leafy green salad and crusty garlic bread.</p>
+
+    <h3>Ingredients</h3>
+    <ul>
+        <li>Meat</li>
+        <li>Onion</li>
+        <li>Canned tomatoes</li>
+        <li>Fresh herbs</li>
+        <li>Sugar</li>
+        <li>Spices and seasonings</li>
+        <li>Noodles</li>
+        <li>Cheese</li>
+        <li>Eggs</li>
+    </ul>
+
+
+    <h3>Steps</h3>
+    <ol>
+        <li>
+            <h4>Cook the meat</h4>
+            <p>Cook the ground meat in a skillet until browned and crumbly. Add the onion and continue cooking until it's translucent. Stir in the canned tomato products, half of the parsley, garlic, basil, 1.5 teaspoons of salt, oregano, and sugar.</p>
+        </li>
+        <li>
+            <h4>Cook the noodles</h4>
+            <p> Boil the lasagna noodles in lightly salted water until they're al dente.</p>
+        </li>
+        <li>
+            <h4>Make the cheese layer</h4>
+            <p>Mix cottage cheese, Parmesan cheese, eggs, the remaining parsley, the remaining salt, and pepper in a bowl.</p>
+        </li>
+        <li>
+            <h4>Assemble the lasagna</h4>
+            <p> Layer the ingredients according to the recipe (starting with sauce and ending with mozzarella) until the lasagna is assembled.</p>
+        </li>
+        <li>
+            <h4>Bake the lasagna</h4>
+            <p>Cover with foil and bake in the preheated oven for about half an hour. Remove the foil and continue baking until the top is golden brown.</p>
+        </li>
+    </ol>
+
+
+
+
+
+
+
 
 
 
