--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="recipes/lasagna.html"></a></li>
-        <li><a href="http://"></a></li>
-        <li><a href="http://"></a></li>
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/Goldenrod_Egg.html">Goldenrod_Egg</a></li>
+        <li><a href=""></a></li>
     </ul>
 </body>
 </html>
