Added the third recepi , Daffodil Cake.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="recipes/Goldenrod_Egg.html">Goldenrod_Egg</a></li>
-        <li><a href=""></a></li>
+        <li><a href="recipes/Goldenrod_Egg.html">Goldenrod Egg</a></li>
+        <li><a href="recipes/Daffodil_Cake.html">Daffodil Cake</a></li>
     </ul>
 </body>
 </html>
